Closed
Bug 594355
Opened 15 years ago
Closed 15 years ago
Default alert sound not playing on Mac when new email arrives
Categories
(MailNews Core :: Backend, defect)
Tracking
(blocking-thunderbird3.1 .7+, thunderbird3.1 .7-fixed)
RESOLVED
FIXED
Thunderbird 3.3a1
People
(Reporter: barsky, Assigned: standard8)
References
()
Details
(Whiteboard: [gs])
Attachments
(2 files, 1 obsolete file)
|
989 bytes,
patch
|
Bienvenu
:
review+
|
Details | Diff | Splinter Review |
|
622 bytes,
patch
|
Bienvenu
:
review+
standard8
:
approval-thunderbird3.1.7+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10_6_4; en-us) AppleWebKit/533.17.8 (KHTML, like Gecko) Version/5.0.1 Safari/533.17.8
Build Identifier: Thunderbird 3.1.2 under MacOS 10.6.4 -- Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en-US; rv:1.9.2.8) Gecko/20100802 Thunderbird/3.1.2
After upgrading from Version 2 to 3, the default alert sound no longer plays when new email arrives. I then chose Preferences, selected General, and under "Play a sound" (which is of course checked) I changed the selection from "System Alert Sound" to "Use the following sound file" and put a .wav file there and this does work. I have verified that my alert sound is functioning fine for other purposes, mute is not on, volume is high, etc., etc. I checked this with two computers running the same Mac OS 10.6.4.
Reproducible: Always
Actual Results:
new email alert sound not playing in Version 3, but changing to user defined sound file does work -- checked on two different computers, had worked fine before upgrading from Version 2 to 3 (3.1.2) under MacOS 10.6.4.
Expected Results:
new email alert sound not should play in Version 3, just like it did in Version 2.
Comment 1•15 years ago
|
||
anything in Console.app when this happens (we have a bunch of issues around this , but nothing tangible as why it happens).
Comment 2•15 years ago
|
||
Sorry I wrongly assumed that cs.berkely.edu would know where console.app is, it's in /Application/utilities - and yes I'm asking you to look into it just after receiving an email and no sound being played.
Also please don't reply by email, reply here so more people can participate and help.
There is nothing in Console.app that seems related to this.
Just to be clear, regarding "when this happens", the problem always occurs -- to be more exact, the problem is not that anything happens, but the contrary, the problem is that there is never any alert
sound when new mail arrives (although my work-around has been to set up a custom .wav file
and that sounds does indeed play whenever there is new email arriving).
Comment 4•15 years ago
|
||
Mike, roland do you get that issue too ?
Comment 5•15 years ago
|
||
I could never get sound to play with 3.1a1pre, didn't try it with 3.1.1, but set it up to play one of the system ".aiff" files when upgraded to 3.1.2 -- that DOES work. Changed pref to use "System Alert Sound", no sound plays.
Comment 6•15 years ago
|
||
(In reply to comment #5)
> I could never get sound to play with 3.1a1pre, didn't try it with 3.1.1, but
> set it up to play one of the system ".aiff" files when upgraded to 3.1.2 --
> that DOES work. Changed pref to use "System Alert Sound", no sound plays.
Mike can you find the latest version that worked (let's get the regression window for that one)
Status: UNCONFIRMED → NEW
Component: General → OS Integration
Ever confirmed: true
Keywords: regression,
regressionwindow-wanted
QA Contact: general → os-integration
Whiteboard: duptome
Comment 7•15 years ago
|
||
I never had a version that worked. IIRC, even Eudora 8.0b7/8.0b8 (TB3.0b3/3.0b4) wouldn't play the "System Alert Sound".
Updated•15 years ago
|
blocking-thunderbird3.2: --- → ?
| Assignee | ||
Updated•15 years ago
|
Status: NEW → RESOLVED
blocking-thunderbird3.2: ? → ---
Closed: 15 years ago
Keywords: regression,
regressionwindow-wanted
Resolution: --- → DUPLICATE
Whiteboard: duptome
| Assignee | ||
Comment 11•15 years ago
|
||
Urgh, actually not quite a duplicate.
| Assignee | ||
Updated•15 years ago
|
Assignee: nobody → bugzilla
blocking-thunderbird3.1: --- → .7+
Component: OS Integration → Backend
Product: Thunderbird → MailNews Core
QA Contact: os-integration → backend
Summary: default alert sound not playing when new email arrives in Version 3 → Default alert sound not playing on Mac when new email arrives
| Assignee | ||
Updated•15 years ago
|
Whiteboard: [gs]
| Assignee | ||
Comment 12•15 years ago
|
||
PlaySystemSound and PlayEventSound are a no-op on Mac, therefore use Beep() and this ends up with the same sound that Thunderbird 2 used.
This also updates non-Mac to use the new function for the new mail sound rather than the old one, as per bug 503246.
Attachment #487310 -
Flags: review?(bienvenu)
| Assignee | ||
Updated•15 years ago
|
Status: REOPENED → ASSIGNED
| Assignee | ||
Comment 13•15 years ago
|
||
This fix for the 3.1 / 1.9.2 builds just changes the Mac interface to use Beep, and doesn't change the obsolete API to limit the affected platforms.
Attachment #487312 -
Flags: review?(bienvenu)
| Assignee | ||
Comment 14•15 years ago
|
||
I realised that the 1.9.2 patch shouldn't remove DEFAULT_SYSTEM_SOUND, so this is the correct fix for 1.9.2.
Attachment #487312 -
Attachment is obsolete: true
Attachment #487324 -
Flags: review?(bienvenu)
Attachment #487312 -
Flags: review?(bienvenu)
Comment 15•15 years ago
|
||
Comment on attachment 487310 [details] [diff] [review]
[checked in] The fix
my mac is beeping away annoyingly now :-)
Attachment #487310 -
Flags: review?(bienvenu) → review+
Updated•15 years ago
|
Attachment #487324 -
Flags: review?(bienvenu) → review+
| Assignee | ||
Comment 16•15 years ago
|
||
Comment on attachment 487310 [details] [diff] [review]
[checked in] The fix
Checked in: http://hg.mozilla.org/comm-central/rev/8a850b6c8f62
Attachment #487310 -
Attachment description: The fix → [checked in] The fix
| Assignee | ||
Updated•15 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 15 years ago → 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.3a1
| Assignee | ||
Updated•15 years ago
|
Attachment #487324 -
Flags: approval-thunderbird3.1.7?
| Assignee | ||
Updated•15 years ago
|
Attachment #487324 -
Flags: approval-thunderbird3.1.7? → approval-thunderbird3.1.7+
| Assignee | ||
Comment 17•15 years ago
|
||
Checked into 1.9.2: http://hg.mozilla.org/releases/comm-1.9.2/rev/9863b7a2b75c
status-thunderbird3.1:
--- → .7-fixed
Comment 18•15 years ago
|
||
Is the system sound the bell sound?
I've been getting it for only some of the emails that arrive, like a third of them or something like that.
| Assignee | ||
Comment 19•15 years ago
|
||
(In reply to comment #18)
> Is the system sound the bell sound?
Its the one configured under System Preferences -> Sound (at least on Mac 10.5).
> I've been getting it for only some of the emails that arrive, like a third of
> them or something like that.
Do you filter to Local Folders? iirc we don't do new mail alert when that happens.
Comment 20•15 years ago
|
||
(In reply to comment #19)
> (In reply to comment #18)
> > Is the system sound the bell sound?
>
> Its the one configured under System Preferences -> Sound (at least on Mac
> 10.5).
>
> > I've been getting it for only some of the emails that arrive, like a third of
> > them or something like that.
>
> Do you filter to Local Folders? iirc we don't do new mail alert when that
> happens.
Yes, ok, that's it then. I find it strange, but I turned the alert off anyways ;-)
You need to log in
before you can comment on or make changes to this bug.
Description
•