Bug 594355 - Default alert sound not playing on Mac when new email arrives; r=bienvenu